# asteroid-helloworld

./: CMakeLists.txt  README.md  asteroid-helloworld.desktop  asteroid-helloworld.desktop.template  asteroid-helloworld.in  asteroid-helloworld.pro  main.qml  runscript.in
i18n/: asteroid-helloworld.desktop.h
src/: CMakeLists.txt  main.qml
